// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 1.default 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 2.clickable 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-up"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-down"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-left"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;

exports[`CaretIcon [common] example testing should match snapshot(s) for 3.disabled 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CaretIcon lucid-CaretIcon-is-right"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 3 16 8"
>
  <path
    d="M1.234 4.408l6.718 7.184 6.813-7.184H1.235z"
  />
</Icon>
`;
